# libgetter

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  annotated.html  annotated_dup.js  array_8c.html  array_8c.js  array_8h.html  array_8h.js  array_8h_source.html  attributes_8h.html  attributes_8h.js  attributes_8h_source.html  box_2box_8c.html  box_2box_8c.js  box_2box_8h.html  box_2box_8h.js  box_2box_8h_source.html  box_2info_8c.html  box_2info_8c.js  box_2info_8h.html  box_2info_8h.js  box_2info_8h_source.html  box__info_8c.html  box__info_8c.js  box__info_8h.html  box__info_8h.js  box__info_8h_source.html  classes.html  cmd_8c.html  cmd_8c.js  cmd_8h.html  cmd_8h.js  cmd_8h_source.html  common.h.in  common_8h.html  common_8h.js  (+190 more)
.github/workflows/: build.yml  docs.yml
cmake/: docs.cmake  incstr.cmake
include/getter/: attributes.h  common.h  core.h  decl.h  getter.h
include/getter/box/: box.h  info.h
include/getter/db/: init.h
include/getter/files/zip/: box.h  box_info.h  package.h  release_extract.h  release_info.h
include/getter/fs/: resolve_path.h
include/getter/release/: extracted_release.h  info.h  release.h  version.h
include/getter/script/: script_runner.h
include/getter/script/runners/: cmd.h  sh.h
include/getter/tools/: error.h  fsmgmt.h  platform.h  tmp.h  touch.h  version.h
include/getter/types/: array.h  json.h  pkvf.h  string.h  vec.h  vector.h
include/getter/types/vectors/: release.h  string.h
lib/: CMakeLists.txt  c-vector.cmake  googletest.cmake  jsmn.cmake  json-c.cmake  libzip.cmake  pcre2.cmake  sqlite3.cmake  tiny-regex-c.cmake  vec.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+28 more)
src/: CMakeLists.txt  core.c
src/box/: box.c  info.c
src/db/: init.c
src/db/sql/: init.sql
src/files/zip/: box.c  box_info.c  package.c  release_extract.c  release_info.c
src/release/: extracted_release.c  info.c  release.c  version.c
src/script/: script_runner.c
src/script/runners/: cmd.c  sh.c
src/tools/: error.c  fsmgmt.c  platform.c  tmp.c  touch.c  version.c
src/types/: array.c  json.c  pkvf.c  string.c  vec.c
tests/: CMakeLists.txt  cppvector.c  cppvector.h  test.cpp
tests/box/: box.cpp  info.cpp
tests/db/: init.cpp
tests/files/zip/: box.cpp  box_info.cpp  package.cpp  release_extract.cpp  release_info.cpp
tests/release/: extracted_release.cpp  info.cpp  release.cpp  version.cpp
tests/script/: GetterScript.cmd  GetterScript.sh  script_runner.cpp
tests/script/runners/: cmd.cpp  sh.cpp
tests/tools/: tmp.cpp
tests/types/: pkvf.cpp  vector.cpp
